--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -18,7 +18,7 @@
         android:layout_height="180dp"
         android:layout_marginBottom="32dp"
         android:scaleType="fitCenter"
-        android:src="@drawable/news_pic" />
+        android:src="@drawable/logo" />
 
     <EditText
         android:id="@+id/email_et"
