--- a/app/src/main/res/layout/slide3.xml
+++ b/app/src/main/res/layout/slide3.xml
@@ -22,7 +22,7 @@
         android:text="@string/heading_one"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="28dp" />
+        android:textSize="28sp" />
 
     <TextView
         android:id="@+id/textdeccription"
